fixed vertical alignment of image-link fields

--- a/ADnD_1E_Revised/src/1ESheet.css
+++ b/ADnD_1E_Revised/src/1ESheet.css
@@ -2049,15 +2049,12 @@ section.npc-box.statblock3 .image-avatar {
 
 .charsheet .wrapper label:has(textarea.image-link),
 .charsheet .wrapper label:has(textarea.info-link) {
-  margin: auto;
-  margin-left: 0;
+  margin: 0 auto auto 0;
   width: min-content;
 }
 
 .charsheet label:has(textarea.image-link:focus-within),
 .charsheet label:has(textarea.info-link:focus-within) {
-  margin: auto;
-  margin-left: 0;
   min-width: 18.5em;
   width: 100%;
 }
@@ -2068,6 +2065,7 @@ section.npc-box.statblock3 .image-avatar {
 
 .charsheet label .image-link + textarea.image-link,
 .charsheet label .info-link + textarea.info-link {
+  align-content: end;
   line-height: normal;
   margin-left: 2px;
   max-height: 1.65em;
